@@ -1,3 +1,6 @@
+=== 2016-07-05
+* Enhancements
+  * Added #value= to TextField
 === 2016-07-04
 * Enhancements
   * Can now find span by :text
